<resources>
    <string name="app_name">Fix Fast Buddy 2</string>

    //Google Maps API Key
    <string name="google_maps_api_key">AIzaSyB1Fgdm5-BoI0JBY_3_21nLSwvOjEl802g</string>

    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="drive_with_confidence">DRIVE WITH CONFIDENCE</string>
    <string name="notifications">Notifications</string>
    <string name="u">Hi User,</string>
    <string name="ongoing_eme">OngoingEmergency Services</string>
    <string name="user">Ajith Bandara</string>
    <string name="inspection_travel"><![CDATA[Inspection & Travel]]></string>
    <string name="profile_name">Nimal Perera</string>
    <string name="pro_pic">pro_pic</string>
    <string name="_4_9">4.9</string>
    <string name="view_profile">View Profile</string>
    <string name="earnings">Earnings</string>
    <string name="ratings_and_reviews">Ratings and Reviews</string>
    <string name="manage_services">Manage Services</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="rs_200">Rs. 200</string>
    <string name="_500m">500m</string>
    <string name="problem">Problem</string>
    <string name="distance">Distance</string>
    <string name="bmw_539_nwb_o2k_1717">BMW - 539\nWB-O2K-1717</string>
    <string name="_94_77_123_4567">+94 77 123 4567</string>
    <string name="decline">Decline</string>
    <string name="tire">Tire</string>
    <string name="accept">Accept</string>
    <string name="ok">Ok</string>
    <string name="vehicle">Vehicle :</string>
    <string name="cancel">Cancel</string>
    <string name="arrived">Arrived</string>
    <string name="end">End</string>
    <string name="service_charge">Service Charge:</string>
    <string name="completed">Complete</string>
    <string name="lkr_2950">Rs. 2950.00</string>
    <string name="inspection_">Inspection Fee:</string>
    <string name="travelling_fee">Travelling Fee:</string>
    <string name="rs_2000">Rs. 2000.00</string>
    <string name="rs_350_00">Rs  .   350.00</string>
    <string name="rs_600_00">Rs  . 600.00</string>
    <string name="total">Total:</string>
    <string name="amt">Amount</string>
    <string name="account_info">Account Info</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_joined">Date Joined</string>
    <string name="total_services_completed">Total Services Completed</string>
    <string name="nimal_perera">Nimal Perera</string>
    <string name="_94_77_123_4008">+94 77 123 4008</string>
    <string name="_29_09_2023">29.09.2023</string>
    <string name="_150">150</string>
    <string name="delete">Delete</string>
    <string name="your_servic">Your Services</string>
    <string name="tire_">Tire</string>
    <string name="locked_out">Locked-out</string>
    <string name="fuel_delivery">Fuel Delivery</string>
    <string name="on_going">On-going</string>
    <string name="complete">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="earning">My Earnings</string>
    <string name="rat_and_rev">Ratings and Reviews</string>
    <string name="tires">Tire</string>
    <string name="engines">Engine</string>
    <string name="jump_start">Jump Start</string>
    <string name="services_provided">Services Provided</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_service_provided">serviceProvided</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="address">123-131 Philip Gunawardena Mawatha, Colombo 00400</string>
    <string name="date">2023-10-21</string>
    <string name="time">17:23:29</string>
    <string name="service_id_text">Service ID : </string>
    <string name="_1_1_2023_lkr_2500">1/1/2023 LKR 2500</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="account">Account</string>
    <string name="call_button">Call Button</string>
    <string name="line">line</string>

    <string name="on_going_fragment">On Going Fragment</string>
    <string name="completed_fragment">Completed Fragment</string>
    <string name="cancelled_fragment">Cancelled Fragment</string>
    <string name="back">Back</string>
    <string name="call_button_description">call_button_description</string>
    <string name="ajith_bandara">Ajith Bandara</string>
    <string name="tab_layout_for_navigation">Tab Layout for navigation</string>
    <string name="viewpager_for_tab_content">ViewPager for tab content</string>
    <string name="back_button">back button</string>
    <string name="user_asked_to_cancel">User asked to cancel</string>
    <string name="_1_1_2024">1/1/2024</string>
    <string name="save">Save</string>

</resources>